# V-Shield

./: README.md
crates/vshield-core/: Cargo.toml
crates/vshield-core/src/: crypto.rs  ecc.rs  interleave.rs  lib.rs  protocol.rs  token.rs
crates/vshield-dec/: Cargo.toml
crates/vshield-dec/src/: lib.rs  main.rs
crates/vshield-enc/src/: lib.rs
docs/: API.md  ARCHITECTURE.md  ROADMAP.md
legal/: DISCLAIMER.md  USER_RESPONSIBILITY.md
