[package]
name = "vshield-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Error correction
reed-solomon-erasure = "6.0"

# Image and graphics
image = "0.24"
ndarray = "0.15"

# Cryptography
chacha20poly1305 = "0.10"
rand = "0.8"
sha2 = "0.10"
bs58 = "0.5"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
bytes = "1.0"

# For WASM compatibility later
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
wasm = ["wasm-bindgen"]

[lib]
crate-type = ["cdylib", "rlib"]
