[package]
name = "vshield-dec"
version = "0.1.0"
edition = "2021"

[lib]
name = "vshield_dec"
path = "src/lib.rs"

[[bin]]
name = "vshield-dec"
path = "src/main.rs"

[dependencies]
vshield-core = { path = "../vshield-core" }
image = "0.24"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
chacha20poly1305 = "0.10"
sha2 = "0.10"
serde_json = "1.0"
